[package]
name = "hostap"
version = "0.1.0"
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
license = "Apache-2.0"
description = """
Host 802.11 access point creation utility
"""

[[bin]]
path = "src/main.rs"
name = "hostap"

[dependencies]
clap = "2"
iptables = "0.2"
log = "0.4"
network-manager = "0.11"
pretty_env_logger = "0.2"
rust-ini = "0.12"
